--- a/survey.qmd
+++ b/survey.qmd
@@ -1,4 +1,12 @@
-## Survey
+---
+title: "Survey"
+hide-description: false
+description: ""
+execute:
+  warning: false
+---
+
+## Gesis survey Data
 
 Data was taken from [here](https://search.gesis.org/?source=%7B%22sort%22%3A%5B%7B%22date_recency%22%3A%7B%22order%22%3A%22desc%22%7D%7D%5D%2C%22query%22%3A%7B%22bool%22%3A%7B%22must%22%3A%5B%7B%22query_string%22%3A%7B%22query%22%3A%22economic%22%2C%22default_operator%22%3A%22AND%22%7D%7D%5D%2C%22filter%22%3A%5B%7B%22term%22%3A%7B%22type%22%3A%22research_data%22%7D%7D%2C%7B%22term%22%3A%7B%22study_group.keyword%22%3A%22EB%20-%20Standard%20and%20Special%20Eurobarometer%22%7D%7D%5D%7D%7D%7D&lang=en)
 with data format ".sav"
@@ -21,6 +29,8 @@ haven::read_sav(tmp)
 ```
 
 
+## Excel data from EU commission 
+
 For data taken from EU with ".xslx" format taken from [here](https://data.europa.eu/data/datasets/s2970_fl531_eng?locale=en).
 
 ```{r}
@@ -30,7 +40,7 @@ For data taken from EU with ".xslx" format taken from [here](https://data.europa
 library(readxl)
 
 # Specify the path to your Excel file
-excel_file <- "fl_531_volume_C_SK.xlsx"
+excel_file <- "survey/fl_531_volume_C_SK.xlsx"
 
 # Get the names of all sheets in the Excel file
 sheet_names <- excel_sheets(excel_file)
@@ -46,6 +56,6 @@ for (i in 1:length(sheet_names)) {
 
 # Optional: Convert the list to separate data frames
 list2env(data_frames, envir = .GlobalEnv)
-knitr::kable(head(Q9))
+knitr::kable(Q9)
 
 ```
