--- a/survey.qmd
+++ b/survey.qmd
@@ -6,10 +6,61 @@ execute:
   warning: false
 ---
 
+## ESS social survey
+
+The European Social Survey provides data on attitudes, beliefs and behaviour in 30 countries. ESS is coordinated by the Centre for Comparative Social Surveys (City University, London) in partnership with the Catholic University of Leuven (Belgium); GESIS (Germany); NSD (Norway); SCP (Netherlands) and the University of Amsterdam.
+
+## ESS time period
+
+Ten European Social Survey waves are available:
+
+ESS Round 10-2020
+ESS Round 9 - 2018
+ESS Round 8 - 2016
+ESS Round 7 - 2014
+ESS Round 6 - 2012
+ESS Round 5 - 2010
+ESS Round 4 - 2008
+ESS Round 3 - 2006
+ESS Round 2 - 2004
+ESS Round 1 - 2002
+
+## How to access data
+
+EUI members can access Eurobarometer data via GESIS (the German social science infrastructure service provider) and via ICPSR (the Inter-University Consortium for Political and Social Research archive).
+
+
+### Eurobarometer via GESIS
+
+Access to primary Eurobarometer data is provided by the GESIS Eurobarometer Data Service:
+
+Standard and Special Eurobarometer
+Mannheim Eurobarometer Trend File
+Central and Eastern Eurobarometer
+Candidate Countries Eurobarometer
+Flash Eurobarometer surveys.
+
+### Eurobarometer via ICPSR
+
+EUI members also have access to Eurobarometer files hosted by the ICPSR data archive. Data from ICPSR can only be downloaded by Library administrator. Follow these instructions:
+
+Locate the required data study number(s) in the ICPSR data catalogue
+Send the study number of the dataset required to econlibrary@eui.eu
+Please indicate the format in which the data are required (Stata, SAS &c.)
+The Library provides access via MS OneDrive.
+ICPSR instructions on using ZIP files to compress and decompress data are on this page
+
+EUI ICT Service instructions on using ZIP files to compress and decompress data are on this page
+
+[Read the Responsible Use Statement on the ICPSR site](https://www.icpsr.umich.edu/web/pages/datamanagement/lifecycle/access.html).
+
+European statistical data resources (EUI Library).
+
+ 
 ## Gesis survey Data
 
-Data was taken from [here](https://search.gesis.org/?source=%7B%22sort%22%3A%5B%7B%22date_recency%22%3A%7B%22order%22%3A%22desc%22%7D%7D%5D%2C%22query%22%3A%7B%22bool%22%3A%7B%22must%22%3A%5B%7B%22query_string%22%3A%7B%22query%22%3A%22economic%22%2C%22default_operator%22%3A%22AND%22%7D%7D%5D%2C%22filter%22%3A%5B%7B%22term%22%3A%7B%22type%22%3A%22research_data%22%7D%7D%2C%7B%22term%22%3A%7B%22study_group.keyword%22%3A%22EB%20-%20Standard%20and%20Special%20Eurobarometer%22%7D%7D%5D%7D%7D%7D&lang=en)
-with data format ".sav"
+
+Data was taken from [here](https://search.gesis.org/?source=%7B%22sort%22%3A%5B%7B%22date_recency%22%3A%7B%22order%22%3A%22desc%22%7D%7D%5D%2C%22query%22%3A%7B%22bool%22%3A%7B%22must%22%3A%5B%7B%22query_string%22%3A%7B%22query%22%3A%22economic%22%2C%22default_operator%22%3A%22AND%22%7D%7D%5D%2C%22filter%22%3A%5B%7B%22term%22%3A%7B%22type%22%3A%22research_data%22%7D%7D%2C%7B%22term%22%3A%7B%22study_group.keyword%22%3A%22EB%20-%20Standard%20and%20Special%20Eurobarometer%22%7D%7D%5D%7D%7D%7D&lang=en) with data format ".sav"
 
 Date(s) of Data Collection: 12.01.2023 - 06.02.2023
 
@@ -31,7 +82,7 @@ haven::read_sav(tmp)
 
 ## Excel data from EU commission 
 
-For data taken from EU with ".xslx" format taken from [here](https://data.europa.eu/data/datasets/s2970_fl531_eng?locale=en).
+For data taken from EU with ".xslx" format taken from [here](https://data.europa.eu/data/datasets/s2970_fl531_eng?locale=en) and it's only for testing purpose.
 
 ```{r}
 #| label = "load-pkg-data"
