--- a/survey.qmd
+++ b/survey.qmd
@@ -54,14 +54,13 @@ Abstract:
 Since the early 1970s the European Commission´s Standard & Special Eurobarometer are regularly monitoring the public opinion in the European Union member countries. Principal investigators are the Directorate-General Communication and on occasion other departments of the European Commission or the European Parliament. Over time, candidate and accession countries were included in the Standard Eurobarometer Series. Selected questions or modules may not have been surveyed in each sample. Please consult the basic questionnaire for more information on country filter instructions or other questionnaire routing filters. In this study all question modules are in the standard Eurobarometer context: 1. Standard EU and trend questions, 2. Europeans’ priorities, 3. The EU and the Coronavirus pandemic, 4. European citizenship, 5. The EU’s response to the war in Ukraine, 6. Media use and political information.
 
 ```{r}
-
 library(retroharmonize)
 tmp <- tempfile(fileext = ".sav")
 haven::write_sav(mtcars, tmp)
 haven::read_sav(tmp)
-
 ```
 
+More detailed explanation to harmonization of GESIS data using retroharmonize package can be found [here](https://retroharmonize.dataobservatory.eu/articles/cap.html)
 
 ## Excel data from EU commission 
 
@@ -87,7 +86,7 @@ combined_data <- tibble()
 # Read each sheet (starting from the third sheet) and append to the combined data frame
 for (sheet_name in sheet_names[3:length(sheet_names)]) {
   # Define the range to read (rows 11 to 26)
-  range_to_read <- cell_rows(11:58)
+  range_to_read <- cell_rows(11:100)
 
   # Read the current sheet as a tibble within the specified range
   current_data <- as_tibble(
@@ -102,18 +101,15 @@ for (sheet_name in sheet_names[3:length(sheet_names)]) {
 }
 combined_data <- na.omit(combined_data)
 
-# # Define a threshold for NA proportion
-# threshold <- 0.9 # Example: 90% NA values
-# 
-# # Remove columns where the majority of values are NA
-# na_cols <- sapply(combined_data, function(x) mean(is.na(x))) > threshold
-# combined_data <- combined_data[, !na_cols]
-# 
+grouped_data <- combined_data %>% 
+  group_by(SheetName)
+
 # # Display the structure of the combined data frame
 str(combined_data)
 
 # Optionally, view the first few rows of the combined data
-knitr::kable(head(combined_data))
+knitr::kable(head(grouped_data))
+knitr::kable(tail(grouped_data))
 
 
 ```
